fix spacing issue between text and caret in select label
As illustrated in momentum.design guidelines, the label element must be width: 100% for label text and the caret icon to pulled apart from each other.

--- a/core/scss/components/select/select.scss
+++ b/core/scss/components/select/select.scss
@@ -30,7 +30,7 @@
 
         .#{$select-label__class} {
           @include flex($jc: space-between);
-
+          width: 100%;
           > i,
           > .#{$icon__class} {
             color: $select__icon--disabled;
